kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-todo
  labels:
    name: django-todo
