kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-todo
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-todo
  template:
    metadata:
      labels:
        app: django-todo
    spec:
      containers:
      - name: django-todo
        image: 224574/django-todo:tagname
        ports:
        - containerPort: 8000
