kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgress
          image: postgres:13
          ports:
             - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgress-data
      volumes:
        - name: postgress-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim
