kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: django-todo
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30089
