kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 5432
     targetPort: 5432
  selector:
   app: postgres
